# sim_port_control

./: .env.example  .gitignore  LICENSE  README.md  codecov.yml  docker-compose.yaml  docker-compose.yaml.bak  setup.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_discovered_ports.py  003_force_enabled.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  activity_log.py  discovered_port.py  port_assignment.py  simulator.py  switch.py  user.py
backend/app/routers/: __init__.py  auth.py  discovery.py  logs.py  ports.py  simulators.py  switches.py  system.py  users.py
backend/app/schemas/: __init__.py  activity_log.py  auth.py  discovery.py  port.py  simulator.py  switch.py  user.py
backend/app/services/: __init__.py  auth.py  cisco_ssh.py  encryption.py  port_control.py  port_discovery.py  scheduler.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_cisco_ssh.py  test_cisco_ssh_discovery.py  test_discovery.py  test_health.py  test_logs.py  test_models.py  test_port_control_service.py  test_port_discovery_service.py  test_ports.py  test_services.py  test_simulators.py  test_switches.py  test_system.py  test_users.py
docs/: API.md  ARCHITECTURE.md  CERTBOT.md  CHANGELOG.md  DOCKER_BACKEND.md  DOCKER_FRONTEND.md  TROUBLESHOOTING.md
docs/manual/: SCREENSHOTS-NEEDED.md  index-template.html  styles.css
docs/superpowers/plans/: 2026-03-10-port-discovery-implementation.md  2026-03-11-admin-crud.md
docs/superpowers/specs/: 2026-03-10-port-discovery-design.md  2026-03-11-admin-crud-design.md  2026-03-12-user-manual-design.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.js  vitest.config.js
frontend/public/manual/: index.html  styles.css
frontend/src/: App.vue  main.js
frontend/src/__tests__/: App.spec.js
frontend/src/__tests__/components/: BaseModal.spec.js  ChangePasswordModal.spec.js  PortLegend.spec.js  PortStatusBadge.spec.js  ToastContainer.spec.js
frontend/src/__tests__/router/: index.spec.js
frontend/src/__tests__/services/: api.spec.js
frontend/src/__tests__/stores/: auth.spec.js  notifications.spec.js  simulators.spec.js
frontend/src/__tests__/views/: AdminView.spec.js  LoginView.spec.js  SimulatorDetailView.spec.js  SimulatorsView.spec.js
frontend/src/__tests__/views/admin/: DiscoveredPortsView.spec.js  LogsView.spec.js  PortsView.spec.js  SimulatorsManageView.spec.js  SwitchesView.spec.js  SystemView.spec.js  UsersView.spec.js
frontend/src/assets/: main.css
frontend/src/components/: BaseModal.vue  ChangePasswordModal.vue  PortLegend.vue  PortStatusBadge.vue  ToastContainer.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: auth.js  notifications.js  simulators.js
frontend/src/views/: AdminView.vue  LoginView.vue  SimulatorDetailView.vue  SimulatorsView.vue
frontend/src/views/admin/: DiscoveredPortsView.vue  LogsView.vue  PortsView.vue  SimulatorsManageView.vue  SwitchesView.vue  SystemView.vue  UsersView.vue
nginx/: nginx.conf
scripts/: cert_setup.sh
